--- a/HelpDesk/Views/Shared/_Footer.cshtml
+++ b/HelpDesk/Views/Shared/_Footer.cshtml
@@ -1,7 +1,9 @@
 ﻿@{
     var currentTime = DateTime.Now.ToString("HH:mm:ss");
 }
-<footer class="footer bg-dark text-white mt-4" style="font-size: 0.8rem;">
+
+<!-- Sticky Footer -->
+<footer class="footer mt-auto bg-dark text-white" style="font-size: 0.8rem;">
     <div class="container text-center">
         <p class="mb-0">© 2024 - PetroSol HelpDesk 2.0.1 | RO current time: <span id="current-time">@currentTime</span></p>
     </div>
