--- a/HelpDesk/Views/Helpdesk/ListaFirmaPunctLucru.cshtml
+++ b/HelpDesk/Views/Helpdesk/ListaFirmaPunctLucru.cshtml
@@ -7,7 +7,7 @@
     var currentPage = ViewBag.CurrentPage as int? ?? 1;
     var totalPages = ViewBag.TotalPages as int? ?? 1;
     var userName = ViewBag.UserName;
-    var displayPages = 15; // Number of pages to display in the pagination
+    var displayPages = 15; 
 }
 
 <!DOCTYPE html>
@@ -26,7 +26,10 @@
     <div class="container mt-4">
         <!-- Filter Button and Dropdown Menu -->
         <div class="d-flex justify-content-between mb-3">
-            <button class="btn btn-secondary" id="lista-firma-filter-button">Filtrare</button>
+            <!-- Filter button with a funnel icon -->
+            <button class="btn btn-secondary" id="lista-firma-filter-button">
+                <i class="bi bi-funnel"></i> Filtrare
+            </button>
         </div>
 
         <!-- Filter Dropdown -->
@@ -42,10 +45,17 @@
                 <div id="pctLucruSuggestions" class="dropdown-menu"></div>
             </div>
             <div class="d-flex justify-content-start mt-3">
-                <button class="btn btn-success me-2" id="lista-firma-apply-filter-button">Apply Filter</button>
-                <button class="btn btn-warning" id="lista-firma-reset-filter-button">Reset Filter</button>
+                <!-- Apply filter button with a check-circle icon -->
+                <button class="btn btn-success me-2" id="lista-firma-apply-filter-button">
+                    <i class="bi bi-check-circle"></i> Apply Filter
+                </button>
+                <!-- Reset filter button with an arrow-clockwise icon -->
+                <button class="btn btn-warning" id="lista-firma-reset-filter-button">
+                    <i class="bi bi-arrow-clockwise"></i> Reset Filter
+                </button>
             </div>
         </div>
+
 
         <!-- Table Container -->
         <div class="table-responsive mb-4">
