--- a/HelpDesk/Views/Shared/_Header.cshtml
+++ b/HelpDesk/Views/Shared/_Header.cshtml
@@ -3,7 +3,7 @@
 }
 
 <!-- Bootstrap Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="/Helpdesk/Dashboard">HelpDesk</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
